fix challenge active css on mobile

--- a/src/app/components/challenge-box/challenge-box.component.scss
+++ b/src/app/components/challenge-box/challenge-box.component.scss
@@ -109,3 +109,15 @@
     }
   }
 }
+
+@media screen and (max-width: 765px) {
+  .challengeActive {
+    main {
+      margin-top: 24px;
+    }
+
+    footer {
+      margin: 24px 0;
+    }
+  }
+}
